workspace-sf/force-app/main/default/objects/Cupom__c/Cupom__c.object-meta.xml
<CustomObject>
    <description>Cupom de Desconto</description>
    <label>Cupom</label>
    <nameField>
        <label>Cupom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>