workspace-sf/force-app/main/default/objects/Cupom__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <label>Código</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>