workspace-sf/force-app/main/default/objects/Cupom__c/fields/Limite_de_Utilizacao__c.field-meta.xml
<CustomField>
    <fullName>Limite_de_Utilizacao__c</fullName>
    <description>Campo Numérico Inteiro (Tamanho 1.000)</description>
    <label>Limite de Utilização</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>