workspace-sf/force-app/main/default/objects/Cupom__c/fields/Meio_de_Comercializacao__c.field-meta.xml
<CustomField>
    <fullName>Meio_de_Comercializacao__c</fullName>
    <label>Meio de Comercialização</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MeioComercializacao</valueSetName>
    </valueSet>
</CustomField>