workspace-sf/force-app/main/default/objects/Cupom__c/fields/Percentual__c.field-meta.xml
<CustomField>
    <fullName>Percentual__c</fullName>
    <label>Percentual</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>