workspace-sf/force-app/main/default/objects/Cupom__c/fields/Vigencia_Inicial__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_Inicial__c</fullName>
    <description>Campo no formato de data (DD/MM/AAAA)</description>
    <label>Vigência Inicial</label>
    <required>true</required>
    <type>Date</type>
</CustomField>