workspace-sf/force-app/main/default/objects/Cupom__c/validationRules/Limite_de_Utilizacao_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Limite_de_Utilizacao_0</fullName>
    <active>false</active>
    <errorConditionFormula>Limite_de_Utilizacao__c = 0</errorConditionFormula>
    <errorDisplayField>Limite_de_Utilizacao__c</errorDisplayField>
    <errorMessage>Valor inserido deve ser maior que 0.</errorMessage>
</ValidationRule>