workspace-sf/force-app/main/default/objects/Cupom__c/validationRules/Limite_de_Utilizacao_negativo.validationRule-meta.xml
<ValidationRule>
    <fullName>Limite_de_Utilizacao_negativo</fullName>
    <active>true</active>
    <errorConditionFormula>Limite_de_Utilizacao__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Limite_de_Utilizacao__c</errorDisplayField>
    <errorMessage>Valor inserido não pode ser negativo.</errorMessage>
</ValidationRule>