workspace-sf/force-app/main/default/objects/Cupom__c/validationRules/Percentual.validationRule-meta.xml
<ValidationRule>
    <fullName>Percentual</fullName>
    <active>true</active>
    <errorConditionFormula>Percentual__c  &lt;= 0.0</errorConditionFormula>
    <errorDisplayField>Percentual__c</errorDisplayField>
    <errorMessage>Valor inserido deve ser &gt; 0.</errorMessage>
</ValidationRule>