workspace-sf/force-app/main/default/objects/Cupom__c/validationRules/Valida_codigo.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_codigo</fullName>
    <active>true</active>
    <errorConditionFormula>Codigo__c &lt;&gt; UPPER( Codigo__c )</errorConditionFormula>
    <errorDisplayField>Codigo__c</errorDisplayField>
    <errorMessage>O código do campo tem que ser maiusculo</errorMessage>
</ValidationRule>